--- a/login.html
+++ b/login.html
@@ -1,32 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login</title>
-<link rel="stylesheet" href="css/login.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Library Management System</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-	<div class="login-container">
-		<h2>Login</h2>
-		<div class="input-field">
-			<i class="fa fa-user"></i> 
-			<input type="text" id="username" placeholder="Username or Email">
-		</div>
-		<div class="input-field">
-			<i class="fa fa-lock"></i> 
-			<input type="password" id="password" placeholder="Password">
-		</div>
-		<div class="options">
-			<label><input type="checkbox"> Remember me</label> 
-			<a href="forgotpass.html">Forgot password?</a>
-		</div>
-		<button id="loginButton" class="login-button">Login</button>
-		<p class="register-link">
-			Don't have an account? <a href="register.html">Register</a>
-		</p>
-	</div>
+    <div class="overlay">
+        <div class="container">
+            <!-- Header Section -->
+            <div class="header text-center mb-5">
+                <h1 class="fw-bold text-light">📚 Library Management System</h1>
+                <p class="text-light">Your gateway to the world of books</p>
+            </div>
 
-	<script src="js/login.js"></script>
+            <!-- Login Form -->
+            <div class="form-card mx-auto" id="login-form">
+                <h2 class="text-center">Login</h2>
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" id="email" class="form-control" placeholder="e.g., user@example.com" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" id="password" class="form-control" placeholder="e.g., Password123!" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                    <div class="text-center mt-3">
+                        <a href="#" onclick="toggleForm('forgot-password')" class="link-primary">Forgot Password?</a><br>
+                        <a href="#" onclick="toggleForm('register')" class="link-primary">Don't have an account? Register</a>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Register Form -->
+            <div class="form-card mx-auto hidden" id="register-form">
+                <h2 class="text-center">Register</h2>
+                <form id="registerForm">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Full Name</label>
+                        <input type="text" id="name" class="form-control" placeholder="Enter your full name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email-register" class="form-label">Email</label>
+                        <input type="email" id="email-register" class="form-control" placeholder="e.g., user@example.com" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password-register" class="form-label">Password</label>
+                        <input type="password" id="password-register" class="form-control" placeholder="e.g., Password123!" required>
+                    </div>
+                    <button type="submit" class="btn btn-success w-100">Register</button>
+                    <div class="text-center mt-3">
+                        <a href="#" onclick="toggleForm('login')" class="link-primary">Already have an account? Login</a>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Forgot Password Form -->
+            <div class="form-card mx-auto hidden" id="forgot-password-form">
+                <h2 class="text-center">Forgot Password</h2>
+                <form id="forgotPasswordForm">
+                    <div class="mb-3">
+                        <label for="email-forgot" class="form-label">Email</label>
+                        <input type="email" id="email-forgot" class="form-control" placeholder="Enter your email to reset password" required>
+                    </div>
+                    <button type="submit" class="btn btn-warning w-100">Reset Password</button>
+                    <div class="text-center mt-3">
+                        <a href="#" onclick="toggleForm('login')" class="link-primary">Remembered your password? Login</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="js/login.js"></script>
 </body>
 </html>
