--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
             </div>
         </div>
     </section>
-
+    <button class="scroll-to-top" id="scrollToTopBtn">↑</button>
     <!-- Footer -->
     <footer style="background-color: #343a40; color: #fff; padding: 20px; margin-top: 30px; font-size: 16px;">
         <div 
