--- a/index.html
+++ b/index.html
@@ -13,7 +13,34 @@
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <style>
+/* Styling for circle button */
+.d-flex.justify-content-start {
+    position: fixed;
+    bottom: 20px; /* Adjust as needed */
+    left: 20px;   /* Adjust as needed */
+    z-index: 1050;
+}
 
+.btn-circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.btn-circle:hover {
+    background-color: #0056b3;
+}
+    </style>
+   
 </head>
 
 <body>
@@ -101,9 +128,16 @@
                         class="card-img-top" alt="Book 1">
                     <div class="card-body">
                         <h5 class="card-title">How to catch a Turkey</h5>
-                        <p>Author: Andy ElkertonAndy Elkerton</p>
-                        <p>Year: 2020</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Andy Elkerton</p>
+                        <p class="book-year">Year: 2020</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="How to catch a Turkey" 
+                           data-author="Andy Elkerton" 
+                           data-year="2020"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/81P9B8sY4AL._AC_UL127_SR127,127_.jpg"
+                           data-status="Available"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -113,10 +147,16 @@
                         class="card-img-top" alt="Book 2">
                     <div class="card-body">
                         <h5 class="card-title">The War on Warriors: Behind the Betrayal of the Men Who Keep Us</h5>
-                        <p>Author:
-                            Pete HegsethPete Hegseth</p>
-                        <p>Year: 2019</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Pete Hegseth</p>
+                        <p class="book-year">Year: 2019</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="The War on Warriors: Behind the Betrayal of the Men Who Keep Us" 
+                           data-author="Pete Hegseth" 
+                           data-year="2019"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/7187im2CwUL._AC_UL254_SR254,254_.jpg"
+                           data-status="Available"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -126,10 +166,16 @@
                         class="card-img-top" alt="Book 3">
                     <div class="card-body">
                         <h5 class="card-title">Melania</h5>
-                        <p>Author:
-                            Melania TrumpMelania Trump</p>
-                        <p>Year: 2021</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Melania Trump</p>
+                        <p class="book-year">Year: 2021</p>
+                        <p class="book-status" data-status="Borrowed">Status: Borrowed</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Melania" 
+                           data-author="Melania Trump" 
+                           data-year="2021"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/41e+dwz5W5L._AC_UL127_SR127,127_.jpg"
+                           data-status="Borrowed"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -139,10 +185,16 @@
                         class="card-img-top" alt="Book 4">
                     <div class="card-body">
                         <h5 class="card-title">How to Catch a Reindeer</h5>
-                        <p>Author:
-                            Alice WalsteadAlice Walstead</p>
-                        <p>Year: 2018</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Alice Walstead</p>
+                        <p class="book-year">Year: 2018</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="How to Catch a Reindeer" 
+                           data-author="Alice Walstead" 
+                           data-year="2018"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/91TBEE7LPsL._AC_UL254_SR254,254_.jpg"
+                           data-status="Available"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -208,9 +260,16 @@
                         class="card-img-top" alt="Book 5">
                     <div class="card-body">
                         <h5 class="card-title">Hot Mess</h5>
-                        <p>Author: Jeff Kinney</p>
-                        <p>Year: 2017</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Jeff Kinney</p>
+                        <p class="book-year">Year: 2017</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Hot Mess" 
+                           data-author="Jeff Kinney" 
+                           data-year="2017"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/81mFBsBFYXL._AC_UL254_SR254,254_.jpg"
+                           data-status="Available"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -220,9 +279,16 @@
                         class="card-img-top" alt="Book 6">
                     <div class="card-body">
                         <h5 class="card-title">The Book of Unusual Knowledge</h5>
-                        <p>Author: Publications International Ltd.Publications International</p>
-                        <p>Year: 2016</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Publications International Ltd.</p>
+                        <p class="book-year">Year: 2016</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="The Book of Unusual Knowledge" 
+                           data-author="Publications International Ltd." 
+                           data-year="2016"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/71WC3z4Wt0L._AC_UL254_SR254,254_.jpg"
+                           data-status="Available"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -231,11 +297,17 @@
                     <img src="https://images-na.ssl-images-amazon.com/images/I/71K+9YJ7VbL._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 7">
                     <div class="card-body">
-                        <h5 class="card-title">Dog Man: Big Jim Begins: A Graphic Novel (Dog Man #13): From the Creator
-                            of Captain Underpants</h5>
-                        <p>Author: Dav PilkeyDav Pilkey</p>
-                        <p>View: 2015</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <h5 class="card-title">Dog Man: Big Jim Begins: A Graphic Novel (Dog Man #13): From the Creator of Captain Underpants</h5>
+                        <p class="book-author">Author: Dav Pilkey</p>
+                        <p class="book-year">Year: 2015</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Dog Man: Big Jim Begins: A Graphic Novel (Dog Man #13): From the Creator of Captain Underpants" 
+                           data-author="Dav Pilkey" 
+                           data-year="2015"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/71K+9YJ7VbL._AC_UL254_SR254,254_.jpg"
+                           data-status="Available"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -245,9 +317,16 @@
                         class="card-img-top" alt="Book 8">
                     <div class="card-body">
                         <h5 class="card-title">Chicka Chicka Ho Ho Ho</h5>
-                        <p>Author: Julien ChungJulien Chung</p>
-                        <p>Year: 2014</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: Julien Chung</p>
+                        <p class="book-year">Year: 2014</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Chicka Chicka Ho Ho Ho" 
+                           data-author="Julien Chung" 
+                           data-year="2014"
+                           data-status="Available"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/71omst60IOL._AC_UL254_SR254,254_.jpg"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -259,9 +338,16 @@
                         class="card-img-top" alt="Book 9">
                     <div class="card-body">
                         <h5 class="card-title">By Heart: Recipes to Hold Near and Dear</h5>
-                        <p>Author: No information</p>
-                        <p>Year: 2013</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-author">Author: No information</p>
+                        <p class="book-year">Year: 2013</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="By Heart: Recipes to Hold Near and Dear" 
+                           data-author="No information" 
+                           data-year="2013"
+                           data-status="Available"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/91VztVjWK2L._AC_UL254_SR254,254_.jpg"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -270,12 +356,17 @@
                     <img src="https://images-na.ssl-images-amazon.com/images/I/81ANaVZk5LL._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 10">
                     <div class="card-body">
-                        <h5 class="card-title">Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones
-                        </h5>
-                        <p>Author:
-                            James ClearJames Clear</p>
-                        <p>Year: 2012</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <h5 class="card-title">Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones</h5>
+                        <p class="book-author">Author: James Clear</p>
+                        <p class="book-year">Year: 2012</p>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones" 
+                           data-author="James Clear" 
+                           data-year="2012"
+                           data-status="Available"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/81ANaVZk5LL._AC_UL254_SR254,254_.jpg"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -285,9 +376,16 @@
                         class="card-img-top" alt="Book 11">
                     <div class="card-body">
                         <h5 class="card-title">Little Blue Truck's Christmas: A Christmas Holiday Book for Kids</h5>
-                        <p>Author: Alice SchertleAlice Schertle</p>
+                        <p>Author: Alice Schertle</p>
                         <p>Year: 2011</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Little Blue Truck's Christmas: A Christmas Holiday Book for Kids" 
+                           data-author="Alice Schertle" 
+                           data-year="2011"
+                           data-status="Available"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/81PNtM1NfxL._AC_UL254_SR254,254_.jpg"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
@@ -297,16 +395,27 @@
                         class="card-img-top" alt="Book 12">
                     <div class="card-body">
                         <h5 class="card-title">Little Corner</h5>
-                        <p>Author: Coco WyoCoco Wyo
-                        </p>
+                        <p>Author: Coco Wyo</p>
                         <p>Year: 2010</p>
-                        <a href="#" class="btn btn-outline-primary btn-details">View</a>
+                        <p class="book-status" data-status="Available">Status: Available</p>
+                        <a href="#" class="btn btn-outline-primary btn-details" 
+                           data-title="Little Corner" 
+                           data-author="Coco Wyo" 
+                           data-year="2010"
+                           data-status="Available"
+                           data-img="https://images-na.ssl-images-amazon.com/images/I/71QManc1wDL._AC_UL254_SR254,254_.jpg"
+                           data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <button class="scroll-to-top" id="scrollToTopBtn">↑</button>
 
+
+ 
+    
+   
     <!-- Footer -->
     <footer style="background-color: #343a40; color: #fff; padding: 20px; margin-top: 30px; font-size: 16px;">
         <div 
@@ -395,6 +504,34 @@
         </div>
     </footer>  
 
+    <!-- Modal chung -->
+<div class="modal fade" id="bookModal" tabindex="-1" aria-labelledby="bookModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="bookModalLabel">Book Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body d-flex">
+                <!-- Bên trái: Ảnh -->
+                <div class="col-md-6">
+                    <img id="modal-book-img" src="" alt="Book Image" class="modal-img">
+                </div>
+                <!-- Bên phải: Thông tin -->
+                <div class="col-md-6">
+                    <h5 id="modal-book-title"></h5>
+                    <p><strong>Author:</strong> <span id="modal-book-author"></span></p>
+                    <p><strong>Year:</strong> <span id="modal-book-year"></span></p>
+                    <p><strong>Status:</strong> <span id="modal-book-status"></span></p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -405,7 +542,11 @@
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();  // Initialize AOS animations
+    </script> 
+    <script src="js/index.js">
     </script>
+  
+
 </body>
 
 </html>
