--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             <div class="modal-body d-flex">
                 <!-- Bên trái: Ảnh -->
                 <div class="col-md-6">
-                    <img id="modal-book-img" src="" alt="Book Image" class="modal-img">
+                    <img id="modal-book-img" src="" alt="Book Image" class="modal-img img-fluid">
                 </div>
                 <!-- Bên phải: Thông tin -->
                 <div class="col-md-6">
@@ -533,6 +533,8 @@
 </div>
 
     <!-- Bootstrap JS and dependencies -->
+    <script src="js/index.js">
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -543,9 +545,6 @@
     <script>
         AOS.init();  // Initialize AOS animations
     </script> 
-    <script src="js/index.js">
-    </script>
-  
 
 </body>
 
