--- a/feedback.html
+++ b/feedback.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library Manager</title>
+    <title>Feedback Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,20 +12,16 @@
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/policy.css">
+    <link rel="stylesheet" href="css/feedback.css">
 </head>
-
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light custom-navbar">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR35FLvdopkSZYZeJwoz3rPfYLfr0lnjGcRhQ&s" 
                      alt="Library Logo" 
                      style="height: 50px; width: auto; border-radius: 50%;">
-
                 <p style="color: white; font-size: 40px; margin: 0; margin-left: 10px;">Library</p>
-
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -53,8 +48,8 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="policy.html">Policy</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
                 </ul>
                 <div class="search-bar ms-3 d-flex">
                     <input type="text" class="form-control" placeholder="Search book, author...">
@@ -66,38 +61,68 @@
                 <a href="login.html?form=register" class="btn btn-outline-primary ms-2">Sign Up</a>
             </div>
         </div>
-    </nav>
+    </nav> 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Policy</li>
+          <li class="breadcrumb-item"><a href="contact.html">Contact</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Feedback</li>
         </ol>
       </nav>
-    <!-- Policy Section -->
-    <div class="container mt-4">
-        <div class="policy-section">
-            <h2>Welcome</h2>
-            <p>Welcome to the Online Library Management platform. This policy outlines the terms and conditions of using our services.</p>
-
-            <h2>User Responsibilities</h2>
-            <ul>
-                <li><i class="fa-solid fa-user-shield"></i> Keep your account information confidential.</li>
-                <li><i class="fa-solid fa-gavel"></i> Ensure that the use of the platform complies with applicable laws and regulations.</li>
-                <li><i class="fa-solid fa-exclamation-circle"></i> Immediately report any unauthorized use of your account.</li>
-            </ul>
-
-            <h2>Data Privacy</h2>
-            <p><i class="fa-solid fa-lock"></i> We are committed to protecting your privacy. All personal data collected will be processed according to our privacy policy.</p>
-
-            <h2>Content Management</h2>
-            <p><i class="fa-solid fa-upload"></i> Users are responsible for the content they upload. We reserve the right to remove any content that violates the terms of use.</p>
-
-            <h2>Policy Changes</h2>
-            <p><i class="fa-solid fa-pen"></i> This policy may be updated periodically. Users will be notified of significant changes through our platform.</p>
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center">We value your feedback</h1>
+                <p class="text-center text-muted mb-4">Your feedback helps us improve. Please share your thoughts below.</p>
+                <form action="#" method="POST">
+                    <!-- Name Field -->
+                    <div class="form-group">
+                        <label for="name">Name (Optional):</label>
+                        <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" autofocus>
+                    </div>
+                    <!-- Email Field -->
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" class="form-control" placeholder="Your Email">
+                    </div>
+                    <!-- Feedback Type -->
+                    <div class="form-group">
+                        <label for="type">Feedback Type:</label>
+                        <select id="type" name="type" class="form-control">
+                            <option value="general" selected>General Feedback</option>
+                            <option value="issue">Report an Issue</option>
+                            <option value="suggestion">Suggestion</option>
+                            <option value="compliment">Compliment</option>
+                        </select>
+                    </div>
+                    <!-- Rating -->
+                    <div class="form-group">
+                        <label>How would you rate your experience?</label>
+                        <div class="rating-group d-flex flex-row-reverse justify-content-end">
+                            <input type="radio" id="star5" name="rating" value="5">
+                            <label for="star5">★</label>
+                            <input type="radio" id="star4" name="rating" value="4">
+                            <label for="star4">★</label>
+                            <input type="radio" id="star3" name="rating" value="3" checked> <!-- Default rating -->
+                            <label for="star3">★</label>
+                            <input type="radio" id="star2" name="rating" value="2">
+                            <label for="star2">★</label>
+                            <input type="radio" id="star1" name="rating" value="1">
+                            <label for="star1">★</label>
+                        </div>
+                    </div>
+                    <!-- Feedback Message -->
+                    <div class="form-group">
+                        <label for="message">Your Feedback:</label>
+                        <textarea id="message" name="message" class="form-control" rows="5" placeholder="Share your thoughts..."></textarea>
+                    </div>
+                    <!-- Submit Button -->
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary">Submit Feedback</button>
+                    </div>
+                </form>                
+            </div>
         </div>
     </div>
-
-    <!-- Footer -->
     <footer style="background-color: #343a40; color: #fff; padding: 20px; margin-top: 30px; font-size: 16px;">
         <div 
             style="display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1200px; margin: 0 auto; gap: 20px;" data-aos="fade-in"
@@ -184,7 +209,6 @@
             © 2024 Group2. All rights reserved.
         </div>
     </footer>  
-
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -197,5 +221,4 @@
         AOS.init();  // Initialize AOS animations
     </script>
 </body>
-
 </html>
